methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:34: error: not found: value partern
  partern()
  ^PictureMono2:36: error: not found: value partern
  partern()
  ^